--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "axios": "^1.8.2",
     "bootstrap": "^5.3.3",
     "lucide-react": "^0.483.0",
+    "next": "^15.3.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.56.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.4.0",
+    "react-router-dom": "^7.5.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -51,6 +53,6 @@
     "@tailwindcss/postcss": "^4.0.12",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.15"
+    "tailwindcss": "^4.1.4"
   }
 }
